feat: Merge AI config into server config (#432)
* feat: Merge AI config into server config

- Integrate AI configuration into the server config service
- Remove standalone ai-config service and its route
- Update client settings page to use config API instead of ai-config API
- Mark AI config API as deprecated in favor of server config API
- All AI config keys now use flattened format: ai_summary.enabled, ai_summary.provider, etc.
- Update test API client to maintain backward compatibility
- All 284 tests passing

* feat: Add Cloudflare Worker AI support

- Add AI binding to worker-configuration.d.ts
- Implement generateWorkerAISummary function using env.AI.run()
- Support multiple Worker AI models (Llama, Mistral, Gemma, Deepseek, Qwen)
- Add worker-ai as a provider option with 9 available models
- Update client settings UI with Worker AI option (marked as Free)
- Worker AI requires no API key, uses Cloudflare's free tier
- All 284 tests passing

* security: Force server config to use database storage

- Server config now always uses database storage to prevent API key leakage
- Added explicit 'database' storage mode parameter to CacheImpl constructor
- Updated _worker.ts scheduled function to use database for serverConfig
- Updated base.ts lazy initialization to use database for serverConfig
- Client config can still use S3 if configured for better performance
- AI config was already migrated to server config database in previous commits
- All 284 tests passing

* fix: Fix PR Preview worker name format and URL extraction

- Change PR Preview worker name from `-preview` to `-pr-{number}` format
  to match the format used in clean.yml for proper cleanup
- Extract actual deployment URL from deploy script output instead of hardcoding
- Add PR number to preview site name for better identification

* feat: Add AI model testing button in settings

- Add POST /api/config/test-ai endpoint to test AI model configuration
- Add testAI method to client ConfigAPI
- Add test but

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -138,10 +138,16 @@ jobs:
           REPO_WORKER_NAME: ${{ vars.WORKER_NAME }}
           REPO_DB_NAME: ${{ vars.DB_NAME }}
         run: |
+          PR_NUMBER="${{ needs.prepare.outputs.pr_number }}"
           if [[ "${{ needs.prepare.outputs.is_production }}" == "true" ]]; then
             echo "worker_name=${REPO_WORKER_NAME:-rin-server}" >> $GITHUB_OUTPUT
             echo "db_name=${REPO_DB_NAME:-rin}" >> $GITHUB_OUTPUT
             echo "name=${REPO_NAME:-Rin}" >> $GITHUB_OUTPUT
+          elif [[ "$PR_NUMBER" != "0" ]]; then
+            # PR Preview uses -pr-<number> suffix
+            echo "worker_name=${REPO_WORKER_NAME:-rin-server}-pr-${PR_NUMBER}" >> $GITHUB_OUTPUT
+            echo "db_name=${REPO_DB_NAME:-rin-preview}" >> $GITHUB_OUTPUT
+            echo "name=${REPO_NAME:-Rin} (PR #${PR_NUMBER})" >> $GITHUB_OUTPUT
           else
             echo "worker_name=${REPO_WORKER_NAME:-rin-server}-preview" >> $GITHUB_OUTPUT
             echo "db_name=${REPO_DB_NAME:-rin-preview}" >> $GITHUB_OUTPUT
@@ -185,8 +191,9 @@ jobs:
           RSS_DESCRIPTION: ${{ vars.RSS_DESCRIPTION || '' }}
           CACHE_STORAGE_MODE: ${{ vars.CACHE_STORAGE_MODE || 's3' }}
         run: |
-          bun run deploy
-          echo "url=https://${WORKER_NAME}.${{ secrets.CLOUDFLARE_ACCOUNT_ID }}.workers.dev" >> $GITHUB_OUTPUT
+          bun run deploy | tee deploy_output.log
+          URL=$(grep -oP 'App URL: \Khttps://[^\s]+' deploy_output.log || echo "https://${WORKER_NAME}.${{ secrets.CLOUDFLARE_ACCOUNT_ID }}.workers.dev")
+          echo "url=${URL}" >> $GITHUB_OUTPUT
 
       - name: Comment on PR
         if: needs.prepare.outputs.pr_number != '0'
@@ -195,10 +202,29 @@ jobs:
           script: |
             const url = '${{ steps.deploy.outputs.url }}';
             const prNumber = parseInt('${{ needs.prepare.outputs.pr_number }}');
-            await github.rest.issues.createComment({
+            const { data: comments } = await github.rest.issues.listComments({
               owner: context.repo.owner,
               repo: context.repo.repo,
-              issue_number: prNumber,
-              body: `🚀 **Preview deployed!**\n\n🔗 ${url}`
+              issue_number: prNumber
             });
+            const botComment = comments.find(comment => 
+              comment.user.type === 'Bot' && 
+              comment.body.includes('🚀 **Preview deployed!**')
+            );
+            const body = `🚀 **Preview deployed!**\n\n🔗 ${url}`;
+            if (botComment) {
+              await github.rest.issues.updateComment({
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                comment_id: botComment.id,
+                body: body
+              });
+            } else {
+              await github.rest.issues.createComment({
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                issue_number: prNumber,
+                body: body
+              });
+            }
 
